Bijayini | #2774 | Fix UI breaks on reg page (relationship section)

--- a/ui/app/styles/registration/_relationship.scss
+++ b/ui/app/styles/registration/_relationship.scss
@@ -120,6 +120,9 @@
       }
       padding: 3px 3px 3px 8px;
       line-height: 30px;
+      .col{
+        border: 1px solid #EFEFEF;
+      }
       .col1{ width: 34% }
       .col2{
         width: 33.3%;
